[package]
name = "easyfs-packer"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>", "Yu Chen <yuchen@tsinghua.edu.cn>"]
edition = "2018"
description = "EasyFileSystem packer: mkfs tool for easyfs"
license = "MIT"
repository = "https://github.com/rcore-os/easyfs-packer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
easyfs = "0.1"
rand = "0.8.0"

# [features]
# board_qemu = []
# board_k210 = []